--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
+  display: block;
   text-align: center;
-  background: black;
+  background: white;
+  min-height: 100vh;
 }
 
 .App-logo {
